--- a/package.json
+++ b/package.json
@@ -1,21 +1,35 @@
 {
   "name": "boilerplate-frontend",
   "private": true,
-  "version": "0.0.0",
+  "version": "0.1.0",
   "type": "module",
   "scripts": {
+    "predev": "chmod +x ./env.sh && ./env.sh && cp env-config.js ./public/",
     "dev": "vite",
     "build": "tsc && vite build",
     "lint": "eslint src --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview"
   },
   "dependencies": {
+    "@ant-design/icons": "^5.1.4",
+    "antd": "^5.6.1",
+    "axios": "^1.4.0",
+    "i18next": "^23.1.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-error-boundary": "^4.0.10",
+    "react-helmet-async": "^1.3.0",
+    "react-i18next": "^13.0.0",
+    "react-query": "^3.39.3",
+    "react-router-dom": "^6.13.0",
+    "styled-components": "^5.3.6",
+    "styled-reset": "^4.4.7"
   },
   "devDependencies": {
+    "@types/node": "^20.3.1",
     "@types/react": "^18.0.37",
     "@types/react-dom": "^18.0.11",
+    "@types/styled-components": "^5.1.26",
     "@typescript-eslint/eslint-plugin": "^5.59.0",
     "@typescript-eslint/parser": "^5.59.0",
     "@vitejs/plugin-react": "^4.0.0",
